--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
 <body>
 	<head>
-		<meta http-equiv="REFRESH" content="0;url=itms-services:///?action=download-manifest&amp;url=https://github.com/supersauli/jamboygame/blob/master/jywcq.plist"/>
+		<meta http-equiv="REFRESH" content="0;url=itms-services:///?action=download-manifest&amp;url=https://raw.githubusercontent.com/super2016/jamboygame/master/jywcq.plist"/>
 	</head>
 </html>
