--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 
 <body>
 	<head>
-		<meta http-equiv="REFRESH" content="0;url=itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/sauli2016/jamboygame/master/jywcq.plist"/>
+		<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/sauli2016/jamboygame/master/jywcq.plist"/>
 	</head>
 </html>
